--- a/src/Soenneker.DataTables.Dtos.ServerResponse.csproj
+++ b/src/Soenneker.DataTables.Dtos.ServerResponse.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.DataTables.Dtos.ServerResponse</AssemblyName>
         <PackageId>Soenneker.DataTables.Dtos.ServerResponse</PackageId>
         <PackageTags>datatables dtos serverresponse datatable server response dto datatableserverresponse object csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
